Can now be sent to people to let them play.